# Apple-IIGS-Obj-Viewer

./: FUNCTIONS_FR.md  GS3Dp  GS3Dp.cc  OBJ.po  README.md  README_fr.md  _FileInformation.txt  call_flow.md  equ.csv  preproc.txt
Windows/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README_VS2022.md  build_msvc.ps1  clean_windows.ps1  run_test_doubleclick.ps1
Windows/3d objects/: pla  plaa  tor  tub
Windows/src/: fixed32.h  main.c  main.sym  obj.c  painter.c  renderer.c  viewer.h  win32_main.c  win32_renderer.c
sav/: DEPLOY.py  GS3Dp 00.cc  GS3Dp 01.cc  GS3Dp 02.cc  GS3Dp 03.cc  GS3Dp 03.cc.bak  GS3Dp 03.cc.bak_final  GS3Dp 04.cc  GS3Dp.cc  GS3Dp.cc.bak
scripts/: Equation des plans.txt  analyze_pair_logs.py  diff_pair_logs.py  gen_trig_tables.py  generate_function_refs.py  pair_diag.py  tmp_local_check_q1.py
tools/: compare_equ_sim.py  compare_orders.py  compare_pair_logs.py  eps0_test.py  eps_rel_test.py  epsilon_sweep.py  pair_debug.py  pascal_sim.py  plane_obj.py
